--- a/07-Pig-Game/starter/style.css
+++ b/07-Pig-Game/starter/style.css
@@ -23,6 +23,34 @@ body {
 }
 
 /* LAYOUT */
+
+.hidden {
+  display: none;
+}
+
+.winner-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
+.winner {
+  background-color: white;
+  padding: 10vh 10vw;
+  border-radius: 4px;
+  z-index: 10;
+  border: 1px solid black;
+  font-weight: 900;
+  font-size: 2rem;
+}
+
 main {
   position: relative;
   width: 100rem;
